new-starstream/starstream-dsl/tests/snapshots/insta_simple_tests__boolean_operations_result.snap
---
source: tests/insta_simple_tests.rs
expression: final_state
---
{
  "a": 1,
  "b": 0,
  "comparison": 1,
  "result": 0
}
