new-starstream/starstream-dsl/tests/snapshots/insta_simple_tests__conditional_ast.snap
---
source: tests/insta_simple_tests.rs
expression: "serde_json::to_string_pretty(&program).unwrap()"
---
{
  "items": [
    {
      "Script": {
        "definitions": [
          {
            "ident": {
              "raw": "main",
              "uid": null
            },
            "inputs": [],
            "output": null,
            "body": {
              "Chain": {
                "head": {
                  "Statement": {
                    "BindVar": {
                      "var": {
                        "raw": "x",
                        "uid": null
                      },
                      "mutable": false,
                      "ty": null,
                      "value": {
                        "node": {
                          "PrimaryExpr": {
                            "PrimaryExpr": {
                              "Number": {
                                "literal": 10
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                },
                "tail": {
                  "Chain": {
                    "head": {
                      "Expr": {
                        "node": {
                          "BlockExpr": {
                            "IfThenElse": [
                              {
                                "node": {
                                  "GreaterThan": [
                                    {
                                      "node": {
                                        "PrimaryExpr": {
                                          "PrimaryExpr": {
                                            "Ident": {
                                              "name": {
                                                "raw": "x",
                                                "uid": null
                                              },
                                              "args": null
                                            }
                                          }
                                        }
                                      }
                                    },
                                    {
                                      "node": {
                                        "PrimaryExpr": {
                                          "PrimaryExpr": {
                                            "Number": {
                                              "literal": 5
                                            }
                                          }
                                        }
                                      }
                                    }
                                  ]
                                }
                              },
                              {
                                "Chain": {
                                  "head": {
                                    "Statement": {
                                      "BindVar": {
                                        "var": {
                                          "raw": "y",
                                          "uid": null
                                        },
                                        "mutable": false,
                                        "ty": null,
                                        "value": {
                                          "node": {
                                            "PrimaryExpr": {
                                              "PrimaryExpr": {
                                                "Number": {
                                                  "literal": 20
                                                }
                                              }
                                            }
                                          }
                                        }
                                      }
                                    }
                                  },
                                  "tail": {
                                    "Close": {
                                      "semicolon": false
                                    }
                                  }
                                }
                              },
                              {
                                "Chain": {
                                  "head": {
                                    "Statement": {
                                      "BindVar": {
                                        "var": {
                                          "raw": "y",
                                          "uid": null
                                        },
                                        "mutable": false,
                                        "ty": null,
                                        "value": {
                                          "node": {
                                            "PrimaryExpr": {
                                              "PrimaryExpr": {
                                                "Number": {
                                                  "literal": 0
                                                }
                                              }
                                            }
                                          }
                                        }
                                      }
                                    }
                                  },
                                  "tail": {
                                    "Close": {
                                      "semicolon": false
                                    }
                                  }
                                }
                              }
                            ]
                          }
                        }
                      }
                    },
                    "tail": {
                      "Close": {
                        "semicolon": false
                      }
                    }
                  }
                }
              }
            },
            "effects": []
          }
        ]
      }
    }
  ]
}
