new-starstream/starstream-dsl/tests/snapshots/insta_simple_tests__conditional_opcodes.snap
---
source: tests/insta_simple_tests.rs
expression: "serde_json::to_string_pretty(&opcodes).unwrap()"
---
{
  "opcodes": [
    {
      "Push": 10
    },
    {
      "Store": "x"
    },
    {
      "Push": 20
    },
    {
      "Store": "y"
    },
    {
      "Push": 0
    },
    {
      "Store": "y"
    },
    "Halt"
  ],
  "labels": {}
}
