new-starstream/starstream-dsl/tests/snapshots/insta_simple_tests__error_undefined_variable_ast.snap
---
source: tests/insta_simple_tests.rs
expression: "serde_json::to_string_pretty(&program).unwrap()"
---
{
  "items": [
    {
      "Script": {
        "definitions": [
          {
            "ident": {
              "raw": "main",
              "uid": null
            },
            "inputs": [],
            "output": null,
            "body": {
              "Chain": {
                "head": {
                  "Statement": {
                    "BindVar": {
                      "var": {
                        "raw": "x",
                        "uid": null
                      },
                      "mutable": false,
                      "ty": null,
                      "value": {
                        "node": {
                          "Add": [
                            {
                              "node": {
                                "PrimaryExpr": {
                                  "PrimaryExpr": {
                                    "Ident": {
                                      "name": {
                                        "raw": "y",
                                        "uid": null
                                      },
                                      "args": null
                                    }
                                  }
                                }
                              }
                            },
                            {
                              "node": {
                                "PrimaryExpr": {
                                  "PrimaryExpr": {
                                    "Number": {
                                      "literal": 1
                                    }
                                  }
                                }
                              }
                            }
                          ]
                        }
                      }
                    }
                  }
                },
                "tail": {
                  "Close": {
                    "semicolon": false
                  }
                }
              }
            },
            "effects": []
          }
        ]
      }
    }
  ]
}
