new-starstream/starstream-dsl/tests/snapshots/insta_simple_tests__error_undefined_variable_compilation_error.snap
---
source: tests/insta_simple_tests.rs
expression: "serde_json::to_string_pretty(&result.unwrap_err()).unwrap()"
---
{
  "UndefinedVariable": "y"
}
