new-starstream/starstream-dsl/tests/snapshots/insta_simple_tests__simple_arithmetic_ast.snap
---
source: tests/insta_simple_tests.rs
expression: "serde_json::to_string_pretty(&program).unwrap()"
---
{
  "items": [
    {
      "Script": {
        "definitions": [
          {
            "ident": {
              "raw": "main",
              "uid": null
            },
            "inputs": [],
            "output": null,
            "body": {
              "Chain": {
                "head": {
                  "Statement": {
                    "BindVar": {
                      "var": {
                        "raw": "x",
                        "uid": null
                      },
                      "mutable": false,
                      "ty": null,
                      "value": {
                        "node": {
                          "Add": [
                            {
                              "node": {
                                "PrimaryExpr": {
                                  "PrimaryExpr": {
                                    "Number": {
                                      "literal": 5
                                    }
                                  }
                                }
                              }
                            },
                            {
                              "node": {
                                "Mul": [
                                  {
                                    "node": {
                                      "PrimaryExpr": {
                                        "PrimaryExpr": {
                                          "Number": {
                                            "literal": 3
                                          }
                                        }
                                      }
                                    }
                                  },
                                  {
                                    "node": {
                                      "PrimaryExpr": {
                                        "PrimaryExpr": {
                                          "Number": {
                                            "literal": 2
                                          }
                                        }
                                      }
                                    }
                                  }
                                ]
                              }
                            }
                          ]
                        }
                      }
                    }
                  }
                },
                "tail": {
                  "Close": {
                    "semicolon": false
                  }
                }
              }
            },
            "effects": []
          }
        ]
      }
    }
  ]
}
