new-starstream/starstream-dsl/tests/snapshots/insta_simple_tests__simple_arithmetic_opcodes.snap
---
source: tests/insta_simple_tests.rs
expression: "serde_json::to_string_pretty(&opcodes).unwrap()"
---
{
  "opcodes": [
    {
      "Push": 5
    },
    {
      "Push": 3
    },
    {
      "Push": 2
    },
    "Multiply",
    "Add",
    {
      "Store": "x"
    },
    "Halt"
  ],
  "labels": {}
}
