new-starstream/starstream-dsl/tests/snapshots/insta_simple_tests__while_loop_opcodes.snap
---
source: tests/insta_simple_tests.rs
expression: "serde_json::to_string_pretty(&opcodes).unwrap()"
---
{
  "opcodes": [
    {
      "Push": 0
    },
    {
      "Store": "x"
    },
    {
      "Load": "x"
    },
    {
      "Push": 3
    },
    "LessThan",
    {
      "JumpIfNot": 11
    },
    {
      "Load": "x"
    },
    {
      "Push": 1
    },
    "Add",
    {
      "Store": "x"
    },
    {
      "Jump": 2
    },
    "Halt"
  ],
  "labels": {}
}
